Fixed spacing on page 1

--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,6 @@
 
 #drop-area{
 	width: 500px;
-	height: 300px;
 	background: #fff;
 	text-align: center;
 	border-radius: 20px;
@@ -33,8 +32,13 @@
 	height: 100%;
 	border-radius: 20px;
 	border: 2px dashed #bbb5ff;
-	background: #f7f8ff;
+	background: #a3a3a3;
 	
+}
+
+#img-view:hover{
+	background: #5a5b63;
+	color: white;
 }
 
 #img-view img{
